// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buy Addons Shared App CI Minutes labels does not show labels if input is invalid 1`] = `
"Compute packs are only used after you've used your subscription's monthly quota. The additional compute minutes will roll over month to month and are valid for one year.
     
      Compute pack
      
            x 1,000 compute minutes per pack
            
              -1 compute packs
             Total compute minutes: -1,000    Gitlab Org's compute minutes 
        -
       
      CI minutes pack
       
      -
     
        $10 per pack of 1,000 compute minutes
        Subtotal 
        -
        – Total 
      -
     
      Gitlab Org's compute minutes
     
      CI minutes pack
       
      -
     
        $10 per pack of 1,000 compute minutes
        Subtotal 
        -
        – Total 
      -"
`;

exports[`Buy Addons Shared App CI Minutes labels shows labels correctly for 1 pack 1`] = `
"Compute packs are only used after you've used your subscription's monthly quota. The additional compute minutes will roll over month to month and are valid for one year.
     
      Compute pack
      
            x 1,000 compute minutes per pack =
            1,000 compute minutes
              1 compute pack
             Total compute minutes: 1,000    Gitlab Org's compute minutes 
        $10
       
      CI minutes pack
      (x1) 
      $10
     
        $10 per pack of 1,000 compute minutes
        Subtotal 
        $10
        – Total 
      $10
     
      Gitlab Org's compute minutes
     
      CI minutes pack
      (x1) 
      $10
     
        $10 per pack of 1,000 compute minutes
        Subtotal 
        $10
        – Total 
      $10"
`;

exports[`Buy Addons Shared App CI Minutes labels shows labels correctly for 2 packs 1`] = `
"Compute packs are only used after you've used your subscription's monthly quota. The additional compute minutes will roll over month to month and are valid for one year.
     
      Compute pack
      
            x 1,000 compute minutes per pack =
            2,000 compute minutes
              2 compute packs
             Total compute minutes: 2,000    Gitlab Org's compute minutes 
        $20
       
      CI minutes pack
      (x2) 
      $20
     
        $10 per pack of 1,000 compute minutes
        Subtotal 
        $20
        – Total 
      $20
     
      Gitlab Org's compute minutes
     
      CI minutes pack
      (x2) 
      $20
     
        $10 per pack of 1,000 compute minutes
        Subtotal 
        $20
        – Total 
      $20"
`;

exports[`Buy Addons Shared App Storage labels does not show labels if input is invalid 1`] = `
"Storage packs
      
            x 10 GB per pack
            
              -1 storage packs
             Total storage: -10 GB    Gitlab Org's storage subscription 
        -
       
      Storage pack
       
      -
     
        $60 per 10 GB storage pack per year
       
      Jul 6, 2020 - Dec 15, 2022
       Subtotal 
        -
        – Total 
      -
     
      Gitlab Org's storage subscription
     
      Storage pack
       
      -
     
        $60 per 10 GB storage pack per year
       
      Jul 6, 2020 - Dec 15, 2022
       Subtotal 
        -
        – Total 
      -"
`;

exports[`Buy Addons Shared App Storage labels shows labels correctly for 1 pack 1`] = `
"Storage packs
      
            x 10 GB per pack =
            10 GB of storage
              1 storage pack
             Total storage: 10 GB    Gitlab Org's storage subscription 
        $59.67
       
      Storage pack
      (x1) 
      $59.67
     
        $60 per 10 GB storage pack per year
       
      Jul 6, 2020 - Dec 15, 2022
       Subtotal 
        $59.67
        – Total 
      $59.67
     
      Gitlab Org's storage subscription
     
      Storage pack
      (x1) 
      $59.67
     
        $60 per 10 GB storage pack per year
       
      Jul 6, 2020 - Dec 15, 2022
       Subtotal 
        $59.67
        – Total 
      $59.67"
`;

exports[`Buy Addons Shared App Storage labels shows labels correctly for 2 packs 1`] = `
"Storage packs
      
            x 10 GB per pack =
            20 GB of storage
              2 storage packs
             Total storage: 20 GB    Gitlab Org's storage subscription 
        $59.67
       
      Storage pack
      (x2) 
      $59.67
     
        $60 per 10 GB storage pack per year
       
      Jul 6, 2020 - Dec 15, 2022
       Subtotal 
        $59.67
        – Total 
      $59.67
     
      Gitlab Org's storage subscription
     
      Storage pack
      (x2) 
      $59.67
     
        $60 per 10 GB storage pack per year
       
      Jul 6, 2020 - Dec 15, 2022
       Subtotal 
        $59.67
        – Total 
      $59.67"
`;
